--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.21.0",
     "infinite-react-carousel": "^1.2.11",
     "react": "^16.13.1",
     "react-currency-format": "^1.0.0",
